[package]
name = "tfdoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde = {version = "1.0.145", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
termimad = "0.14"
